methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: not found: value pas
  var x:String=pas
               ^SlugTracking:7: error: type mismatch;
 found   : java.awt.Color
 required: String
    x=getCouleurSol():Color
                     ^SlugTracking:21: error: type mismatch;
 found   : java.awt.Color
 required: String
      x=getCouleurSol():Color
                       ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (biscuit==0){
  ^